--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Układ strony z Flexbox</title>
+    <title>WebCV</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,7 +21,42 @@
             </div>
         </div>
         <div class="srodek">
-            <div class="info"></div>
+            <div class="info">
+                <div class="goradol">
+                <div class="info-gora">
+                <div class="divavatar">
+                    <img src="avatar.png" alt="Avatar">
+                    </div>
+                    <div class="info1">
+                        <h1>Hi, I am Kacper</h1>
+                        <p>Software Junior Developer</p>
+                        <div class="ikony">
+                            <p><img src="mail.png" alt="Email"> kacpersadz@onet.pl</p>
+                            <p><img src="github.png" alt="GitHub"> github.com/Feniksweltmeister</p>
+                        </div>
+                        <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, quis quo. Earum quod quia quisquam praesentium autem deleniti culpa iste illum odit exercitationem architecto, labore a eaque minima laborum sint.</p>
+                    </div>
+                </div>
+                <div class="info-dol">
+                    <div class="experience">
+                        <div class="experience-gora"> <h3>Experience</h3>
+                        </div>
+                        <ul>
+                            <li>- Samsung Corp. &lt; 2020-2022 &gt;<br>(Intern) - Early development unit</li>
+                            <li>- Netia SA. &lt; 2018-2020 &gt;<br>(Leader) - Project manager</li>
+                            <li>- Xiaomi Corp. &lt; 2016-2018 &gt;<br>(Intern) - Web development</li>
+                        </ul>
+                    </div>
+                    <div class="kontakt">
+                    <div class="kontakt-gora"> <h3>Contact me</h3>
+                    <img src="send.png" alt="send">
+                    </div>
+                    <input type="email" placeholder="Type your e-mail">
+                     <textarea placeholder="Enter message you want to send me..."></textarea>
+                    </div>
+                </div>
+            </div>
+            </div>
             <div class="prawastrona">
                 <div class="technology">
                     <h3>Technology stack</h3>
